# ansi_colle-slim_os

./: .gitignore  .nvim.lua  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  galaxy.yml  pyproject.toml
apt/: README.md  galaxy.yml
apt/changelogs/: config.yaml
apt/changelogs/fragments/: major_changes.yaml  v1.0.0_summary.yaml
apt/roles/ubuntu/meta/: main.yml
apt/roles/ubuntu/tasks/: main.yml
dnf/: README.md  galaxy.yml
dnf/roles/fedora/: README.md
dnf/roles/fedora/files/: bashrc.sh
dnf/roles/fedora/meta/: main.yml
dnf/roles/fedora/tasks/: _rpmfusion.yml  main.yml
meta/: runtime.yml
os_build/: galaxy.yml
os_build/roles/fedora/meta/: main.yml
os_build/roles/fedora/tasks/: main.yml
os_build/roles/ubuntu/tasks/: main.yml
os_build/roles/vm/files/: auto_resize.sh
os_build/roles/vm/meta/: main.yml
playbooks/: install.yml  site.yml
roles/debian/meta/: main.yml
roles/debian/tasks/: main.yml
roles/fedora/files/: bashrc.bash
roles/fedora/tasks/: _rpmfusion.yml  main.yml
roles/ubuntu/files/: bashrc.sh
roles/ubuntu/tasks/: main.yml
roles/windows/: README.md
roles/windows/meta/: main.yml
roles/windows/tasks/: main.yml
windows/: README.md  galaxy.yml
windows/playbooks/: site.yml
windows/playbooks/group_vars/: windows.yml
windows/roles/minimal/tasks/: main.yml
