[project]
name = "ansi_colle-slim_os"
dynamic = ["version"] # Check galaxy.yml for version
description = "Collection that removes bloatwares from distro."
authors = [
  { name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com" },
]
dependencies = ["ansible>=9.2.0", "tomli-w>=1.0.0", "pywinrm"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
log = ["git-cliff", "uv"]
test = ["validate-pyproject", "pre-commit"]
dev = ["ansible-dev-tools", "go-task-bin"]
